tests/fixtures/errors/postprocess/postprocess/exit-1-stderr.js
module.exports = require("./hack")(async () => ({
  exitCode: 1,
  stderr: "Some text on stderr",
}));
